Fix deployment: Add setuptools and update build script for Python 3.13 compatibility

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,4 +9,5 @@ google-auth==2.23.4
 google-auth-oauthlib==1.1.0
 gunicorn==21.2.0
 whitenoise==6.6.0
-dj-database-url==2.1.0 
+dj-database-url==2.1.0
+setuptools>=65.0.0 
