--- a/backend/Procfile
+++ b/backend/Procfile
@@ -1,1 +1,1 @@
-web: gunicorn aitodo.wsgi:application --bind 0.0.0.0:$PORT --workers 3 --timeout 120 
+web: gunicorn aitodo.wsgi:application --bind 0.0.0.0:$PORT 
